package edu.guia.solid.ocp.decorator;

public interface Tax {
    double calculate(Budget b);
}
